# Pkgr

./: .#Makefile  AUTHORS  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  configure  configure.ac  configure.in  pkgr_download.c  pkgrbuild.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile.am  checksum.h  pkgr.h  uninstall.h
include/pkgr/: build-config.h  build-config.h.in  checksum.h  config.h  download.h  install.h  stamp-h1  unpack.h
src/: Makefile.am  Makefile.in
src/cmd/: Makefile.am  Makefile.in  main.c
src/graphics/: Makefile.in
src/lib/: Makefile.am  Makefile.in  checksum.c  config.c  deps.c  download.c  install.c  pkgr.c  uninstall.c  unpack.c
